objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AAkPay__Address_Id__c</fullName>
        <inlineHelpText>Address provider/validator&apos;s Id for this address.</inlineHelpText>
        <label>Address Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Address_Update__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AAkPay__LeadAddressL?id=&quot;&amp;Id, &quot;Address Update&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Barcode_Number__c</fullName>
        <description>Generation of Barcode number requires access to appropriate Address Validation Software / license with AAkonsult Payments</description>
        <inlineHelpText>Numeric version of the Australia Post 4-state barcode.  One digit is returned for each bar of the barcode. Barcode font required for printing.</inlineHelpText>
        <label>Barcode Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Data_Validated__c</fullName>
        <inlineHelpText>Data validated through the Data Validation Tool.
Data validation of DPID must be included in order for this to be updated.</inlineHelpText>
        <label>Data Validated</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>MobilePhone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAkPay__Delivery_Point_Id__c</fullName>
        <label>Delivery Point Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Geocoding_Accuracy__c</fullName>
        <description>Location Precision for PbsSpectrum:
http://kleberwebsite.datatoolscloud.net.au/kleberbrowser/KleberMethodFieldOptions.aspx?Method=DataTools.Enhance.Address.Geocoding.PbsSpectrum.Au.Append&amp;ResultField=LocationPrecision&amp;Description=A%20code%20describing%20the%20precision%20of%20the%20geocode.&amp;pt=</description>
        <inlineHelpText>Displays the accuracy of the geocoding results</inlineHelpText>
        <label>Geocoding Accuracy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__LeadSectionOther__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__LeadEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadSectionOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__Update_Geocode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked, the address will be geocoded if it is missing</inlineHelpText>
        <label>Update Geocode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AAkPay__leadSectionAdditionalInfo__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__LeadEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leadSectionAdditionalInfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__leadSectionAddress__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__LeadEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leadSectionAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__leadSectionDescription__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__LeadEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leadSectionDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAkPay__leadSectionInformation__c</fullName>
        <description>Used for ordering of sections in edit/new page override AAkPay__LeadEdit page</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leadSectionInformation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
</CustomObject>